ADD neas and apod

--- a/client/src/styles/components/_Nav.scss
+++ b/client/src/styles/components/_Nav.scss
@@ -1,11 +1,16 @@
 .navbar{
     display:flex;
-    justify-content: space-around;
+    justify-content:space-evenly;
     align-items: center;
     align-content: center;
+    gap:25px;
 
 }
 
 a{
     text-decoration: none;
+}
+
+.burger{
+    width:35px;
 }
