--- a/client/src/styles/utils/variables.scss
+++ b/client/src/styles/utils/variables.scss
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;500;800&family=Libre+Baskerville&display=swap');
 
-$nasa-background:"";
 $font: 'Dosis', sans-serif;
+
+$color1:#343C46;
+$color2:#4E5B67;
+$color3:#65737E;
+$color4:#A7ADBB;
+$color5:#C1C5CE;
