--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -5,7 +5,9 @@
 @import './components/Nav';
 @import './components/LandingsList';
 @import './components/NeasCard';
+@import './components/NeasForm';
 @import './components/NeasList';
+
 
 @import './elements/button';
 
