--- a/client/src/styles/utils/variables.scss
+++ b/client/src/styles/utils/variables.scss
@@ -2,6 +2,14 @@
 
 $font: 'Dosis', sans-serif;
 
+//input variables
+$primary: #11998e;
+$secondary: #38ef7d;
+$white: #fff;
+$gray: #9b9b9b;
+
+
+
 $color1:#343C46;
 $color2:#4E5B67;
 $color3:#65737E;
