--- a/client/src/styles/components/_Header.scss
+++ b/client/src/styles/components/_Header.scss
@@ -1,21 +1,16 @@
-.header{
+.header {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    flex-wrap: wrap;
-    margin-left:30px;
-    margin-right:30px;
-
-    
-
+    align-content: center;
+    flex-wrap: nowrap;
+    margin-left: 30px;
+    margin-right: 30px;
 }
-
 
 .nasa-logo {
     width: 100px;
-
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
