--- a/client/src/styles/components/_Nav.scss
+++ b/client/src/styles/components/_Nav.scss
@@ -1,10 +1,15 @@
 .navbar{
     display:flex;
-    justify-content:space-evenly;
+    flex-wrap: wrap;
+    justify-content:space-between;
     align-items: center;
     align-content: center;
-    gap:25px;
+    flex-shrink: 2;
+}
 
+.navbar__list{
+    list-style: none;
+    overflow-y: visible;
 }
 
 a{
