--- a/client/src/styles/elements/_button.scss
+++ b/client/src/styles/elements/_button.scss
@@ -24,8 +24,35 @@
    
 }
 
+.button2 {
+    display: inline-block;
+    padding: 0.35em 1.2em;
+    border: 0.1em solid black;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: white;
+    text-align: center;
+    transition: all 0.2s;
+    border-radius: 15px;;
+}
+
+.button2:hover {
+    color: #000000;
+    background-color: #FFFFFF;
+    @include shadow;
+   
+}
+
 @media all and (max-width:30em) {
     .button1 {
+        display: block;
+        margin: 0.4em auto;
+    }
+    .button2 {
         display: block;
         margin: 0.4em auto;
     }
