--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,14 +1,16 @@
 @import './views/app';
+
+@import './components/Footer';
 @import './components/Header';
 @import './components/Home';
 @import './components/LandingsCard';
-@import './components/Nav';
 @import './components/LandingsList';
+@import './components/Nav';
 @import './components/NeasCard';
 @import './components/NeasForm';
 @import './components/NeasList';
 
-
 @import './elements/button';
+@import './elements/input';
 
 @import './views/main';
