--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -9,8 +9,12 @@
 @import './components/NeasCard';
 @import './components/NeasForm';
 @import './components/NeasList';
+@import './components/LandingsForm';
+@import './components/User';
 
 @import './elements/button';
 @import './elements/input';
+@import './elements/cart-icon';
 
 @import './views/main';
+
