--- a/client/src/styles/components/_LandingsCard.scss
+++ b/client/src/styles/components/_LandingsCard.scss
@@ -2,7 +2,8 @@
 
 
 .landing-card{
-    border: 2px solid black;
+   color:black;
+    background-color: white;
     margin:10px;
     border-radius: 15px;
     padding:15px;
