ADD delete button for neas and landings

--- a/client/src/styles/components/_Header.scss
+++ b/client/src/styles/components/_Header.scss
@@ -1,15 +1,17 @@
 .header {
-    
+
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-left: 30px;
-    margin-right: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    -webkit-box-shadow: inset 0px 0px 50px 0px rgba(0, 0, 0, 0.85);
+    box-shadow: inset 0px 0px 50px 0px rgba(0, 0, 0, 0.85);
 
 }
 
-.header__button-container{
-    display:flex;
+.header__button-container {
+    display: flex;
     justify-content: center;
     align-items: center;
 
