--- a/client/src/styles/elements/_input.scss
+++ b/client/src/styles/elements/_input.scss
@@ -31,13 +31,13 @@
 }
 
 .input__label {
-    color: white;
+    color:$white;
     position: absolute;
     top: 0;
     display: block;
     transition: 0.2s;
     font-size: 1rem;
-    color: $gray;
+    color: $white;
 }
 
 .input__field:focus {
