--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -15,6 +15,7 @@
 @import './elements/button';
 @import './elements/input';
 @import './elements/cart-icon';
+@import './elements/pagination';
 
 @import './views/main';
 
